LOGCXX-528 (#66)

Fixes for checking that C++11 is available.  Fix for older compilers.